app/src/main/java/com/example/petvitals/domain/error/Error.kt
package com.example.petvitals.domain.error

sealed interface Error
